feat: 添加获取群列表接口
